--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
                 <div class="col-12 col-lg-6">
                     <h4 class="ff_poppins fw_500 fs_45">Perfect Solution for Small Businesses</h4>
                     <p class="ff_roboto fw_400 fs_21 fc_gray my">Pricing plans that fit like a glove.</p>
-                    <div class="mb_50">
+                    <div class="pb_35">
                         <button class="ff_roboto fw_500 fs_16 fc_white try-button mb_20 mb-lg-0">Try it Free</button>
                         <button class="ff_roboto fw_500 fs_16 fc_blue get-btn">Get a Demo</button>
                     </div>
+                    <div class="simple_line mt_50"></div>
                     <div class="d_flex">
                         <img src="./assets/img/svg/starts_img.svg" alt="starts_img" class="mr_25">
                         <p class="ff_roboto fw_600 fs_18 fc_gray mw-274">5,200 businesses<span class="fw_400">use
@@ -91,9 +92,9 @@
     </section>
     <footer>
         <div class="container pt_35">
-            <div class="row">
+            <div class="row mt_50 mt-md-0">
                 <div class="col-12 col-lg-4">
-                    <a class="ff_poppins fw_600 fs_26 fc_blue">
+                    <a href="http://127.0.0.1:5500/index.html" class="ff_poppins fw_600 fs_26 fc_blue">
                         chat<span class="fw_300">app</span>
                     </a>
                     <p class="ff_poppins fw_400 fs_15 fc_gray ">
@@ -136,13 +137,13 @@
                                 <li><a href="" class="ff_poppins fw_400 fs_18 fc_black">Contact Us</a></li>
                                 <li><a href="info@chatapp.com" class="fc_blue">info@chatapp.com</a></li>
                                 <li><a href="tel">1-800-200-300</a></li>
-                                <li><a href="">3500 Deer Creek Rd Palo Alto, CA</a></li>
+                                <li><a href="https://goo.gl/maps/1XaUYikgaJ8gnEEL6">3500 Deer Creek Rd Palo Alto, CA</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <p class="ff_roboto fw_400 fs_14 fc_gray padding mt_50 mt-sm-0">© Copyright ChatApp Inc.</p>
+            <p class="ff_roboto fw_400 fs_14 fc_gray padding mt_50">© Copyright ChatApp Inc.</p>
         </div>
     </footer>
 </body>
