--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <img src="./assets/img/png/chat_img.png" alt="" class="w_100 ">
+                    <img src="./assets/img/png/chat_img.png" alt="chat_img" class="w_100 ">
                 </div>
             </div>
         </section>
@@ -135,9 +135,10 @@
                         <div class="col-12 col-sm-6 mt_20 mt-sm-0">
                             <ul>
                                 <li><a href="" class="ff_poppins fw_400 fs_18 fc_black">Contact Us</a></li>
-                                <li><a href="info@chatapp.com" class="fc_blue">info@chatapp.com</a></li>
+                                <li><a href="info@chatapp.com">info@chatapp.com</a></li>
                                 <li><a href="tel">1-800-200-300</a></li>
-                                <li><a href="https://goo.gl/maps/1XaUYikgaJ8gnEEL6">3500 Deer Creek Rd Palo Alto, CA</a></li>
+                                <li><a href="https://goo.gl/maps/1XaUYikgaJ8gnEEL6">3500 Deer Creek Rd Palo Alto, CA</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
