--- a/index.html
+++ b/index.html
@@ -65,13 +65,16 @@
             <img src="./assets/img/png/team_chat.png" alt="team_chat" class="w_100">
         </div>
     </section>
-    <section class="bg-color ">
+    <section class="bg-color p_relative ">
         <div class="container py">
-            <div class="row align_items_center pyc">
-                <div class="col-12 col-lg-6 p_relative w_50% ">
-                    <img src="./assets/img/png/mens_in_cafe.png" alt="mens_in_cafe"
-                        class="w_100 position_absolute image">
+            <div class="row align_items_center py">
+                <div class="col-12 col-lg-6 ">
+                    <div class="w_50 position_absolute">
+                        <img class="w_100" src="assets/img/png/mens_in_cafe.png" alt="mens_in_cafe">
+
+                    </div>
                 </div>
+
                 <div class="col-12 col-lg-6">
                     <h4 class="ff_poppins fw_500 fs_45">Perfect Solution for Small Businesses</h4>
                     <p class="ff_roboto fw_400 fs_21 fc_gray my">Pricing plans that fit like a glove.</p>
